0x01-variables_if_else_while/0-positive_or_negative.c:

sitive_or_negative.c:30:2: error: expected declaration or statement at end of input
   30 |  return (0);
      |  ^~~~~~i
